--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   }
 }
